removed redundant code

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT=8080
-DB_URI=mongodb+srv://khoubaibkb99:khoubaib123@cluster0.y14dv5o.mongodb.net/chatApp?retryWrites=true&w=majority
-JWT_SECRET=veryverystrong
+PORT=
+DB_URI=
+JWT_SECRET=
